# csa-os

./: README.md
csa-phw2/: main.c  main.s  new_res.txt  old_main.s  old_res.txt  test.txt
csa-phw3/: main-old.s  main-up.s  main.c  main.s  readme.md  results-main-old.txt  results-main-up.txt  results-main.txt  test.txt
csa-phw4/: README.md  main  main.cpp  results.txt
csa-pw1/: main.c  main_1.s  main_2.s  results_1.txt  results_2.txt  test.txt
os-phw1/: README.md
os-phw1/4p/: 4p  main.c  report.md  requirements.md
os-phw1/4p/results/: black-sheep.txt
os-phw1/5p/: 5p  main.c  report.md  requirements.md
os-phw1/6p/: 6p  main.c  report.md  requirements.md
os-phw1/6p/results/: sweet-dreams.txt
os-phw1/7p/: 7p  main.c  report.md  requirements.md
os-phw1/8p/: 8p1  8p2  process_1.c  process_2.c  report.md  requirements.md
os-phw1/8p/results/: call-me.txt  (+2 more)
os-phw1/texts/: black-sheep.txt  call-me.txt  keine-lust.txt  sweet-dreams.txt  this-fire.txt
os-phw2/: README.md
os-phw2/4p/: main.c  report.md  requirements.md
os-phw2/5p/: main.c  report.md
os-phw2/6p/: main.c  report.md  requirements.md
os-phw3/: README.md
os-phw3/4-5p/: report.md  requirements.md
os-phw3/4-5p/src/: CMakeLists.txt  funcs_for_tcp.c  funcs_for_tcp.h  hotel.c  street.c  visitors.c
os-phw3/6-7p/: report.md  requirements.md
os-phw3/8p/: requirements.md
os-phw4/: README.md
os-phw4/4-5p/: report.md  requirements.md
os-phw4/6-7p/: report.md  requirements.md
os-phw4/6-7p/src/: CMakeLists.txt  display.c  funcs_for_udp.c  funcs_for_udp.h  hotel.c  street.c  visitors.c
(+13 files in other folders)
